# magic-eye-generator

./: .env.example  .gitignore  GEMINI.md  README.md  check_gcs.py  main.py  pyproject.toml
DOCS/: dataset_generation.md  model_training.md
config/: settings.py
datasets/: metadata.csv
main/: __init__.py  runner.py
src/config/: settings.py
src/consts/: magic_eye_assets.py
src/core/: dataset_generator.py  dataset_initializer.py  generator.py  image_uploader.py  model_evaluator.py  model_tester.py  trainer.py
src/dtos/: generated_image.py  magic_eye_dataset.py
src/engines/: __init__.py  dataset_downloader.py  dataset_generator.py  dataset_initializer.py  image_uploader.py  model_downloader.py  model_tester.py  model_trainer.py  model_uploader.py  onnx_converter.py
src/prompts/: test_report_llm_prompt.md  test_report_rule_template.md
src/services/: gcp_storage.py  gcp_storage_service.py  hf_storage_service.py  magic_eye_service.py
src/utils/: dataset_stats.py  get_diverse_prompts.py  image_proc.py  onnx_quantizer.py  path_utils.py  rebalance_dataset_split.py  spinner.py  split_helper.py  stereogram.py  test_report_generator.py  test_result_uploader.py  tqdm_config.py
test_results/: test_logs.json  test_report.md
test_results/260316_124202/: test_logs_onnx_260316_124202.json  test_report_onnx_260316_124202.md
test_results/260316_133906/: test_logs_onnx_260316_133906.json  test_report_onnx_260316_133906.md
test_results/260317_172846/: test_logs_onnx_260317_172846.json  test_report_onnx_260317_172846.md
test_results/260319_201333/: test_logs_onnx_260319_201333.json  test_report_onnx_260319_201333.md
test_results/260322_103332/: test_logs_onnx_260322_103332.json  test_report_onnx_260322_103332.md
