[project]
name = "magic-eye-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.36.0",
    "fastapi>=0.135.1",
    "google-cloud-storage>=3.9.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "transformers>=5.3.0",
    "uvicorn>=0.41.0",
    "xformers>=0.0.35",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true  # 중요: 이 인덱스는 지정된 패키지에만 사용하도록 제한함

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
