[project]
name = "StereoVision_Showdown"
version = "0.1.0"
description = "This project is a gamification AI service that builds an AI model that interprets the Magic Eye (SIRDS) image and confronts humans by constructing an intelligence index according to the amount of training data in a step-by-step difficulty."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.133.1",
    "fastapi-utils>=0.8.0",
    "firebase-admin>=7.2.0",
    "googletrans>=4.0.2",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "numpy>=2.0.0",
    "pillow>=10.0.0",
    "uvicorn>=0.30.0",
    "accelerate>=0.26.0",
    "diffusers>=0.26.0",
    "opencv-python>=4.8.0",
    "torchvision>=0.16.0,<0.21.0",
    "transformers>=4.35.0",
    "google-cloud-storage>=2.14.0",
    "torch>=2.5.1",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.1.0"]

[tool.uv]
environments = []

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torchvision = [
  { index = "pytorch-cuda", marker = "sys_platform == 'win32'" },
]

[tool.ruff]
ignore = ["E501"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
